--- a/index.html
+++ b/index.html
@@ -1,12 +1,206 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tea house with tailwind.</title>
     <link rel="stylesheet" href="css/main.css">
+    <!-- font awesome cdn -->
+    <script src="https://kit.fontawesome.com/3c33caa5dd.js" crossorigin="anonymous">
+    </script>
 </head>
-<body>
-    
+
+<body class="font-manrope">
+    <main class="max-w-screen-xl mx-auto px-10 lg:max-w-screen-2xl lg:px-28">
+        <header class="flex flex-col sm:flex-row pt-10 mb-20">
+            <!-- Header part -->
+            <div class="space-y-4">
+                <h1 class="text-5xl lg:text-7xl font-bold">
+                    It's good <br>
+                    tea time at The <br>
+                    Tea House
+                </h1>
+                <p class="w-3/4 text-gray-500">
+                    Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.
+                </p>
+                <button class="px-5 py-4 bg-gradient-to-r from-[#FF8938] to-[#FF0000] rounded-lg">Explore More <i
+                        class="fa-solid fa-arrow-right -rotate-45"></i></button>
+            </div>
+            <!-- Image part -->
+            <div class="relative">
+                <!-- Image  -->
+                <div>
+                    <img src="images/banner.png" alt="">
+                </div>
+                <!-- Icon and Icon header -->
+                <div
+                    class="absolute flex items-center rounded-lg w-64 h-24 px-26 py-4 bg-white shadow-xl top-48 md:top-60 md:left-16 lg:left-20 lg:top-96">
+                    <div class="pl-4">
+                        <i class="fa-solid fa-star text-2xl text-[#FFC850]"></i>
+                    </div>
+                    <div class="ml-3">
+                        <h1 class="text-3xl font-bold lg:text-4xl">5.00</h1>
+                        <p class="text-gray-500">Trust Pilot Ratings</p>
+                    </div>
+                </div>
+            </div>
+        </header>
+        <!-- Featured product  section  -->
+        <section class="mb-24">
+            <!-- Featured Header section  -->
+            <div class="max-w-screen-lg mx-auto mb-10 mt-16 md:mt-10">
+                <h1 class="font-manrope md:text-center font-extrabold text-4xl lg:text-5xl mb-4 text-[#1C1C1C]">Our
+                    Featured Products</h1>
+                <p class="font-manrope md:text-center text-gray-500 mb-5">There are many variations of juice is
+                    available, but the majority have suffered alteration in some form, by injected humour, or randomised
+                    words which don't look even slightly believable. </p>
+            </div>
+            <!-- Featured Card All -->
+            <div class="grid justify-center items-center md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-5 md:mx-auto">
+                <!-- card 1 -->
+                <div class="px-16 space-y-4 w-72 h-96 bg-[#F4F4F4] rounded-lg py-4 shadow-lg ">
+                    <!-- Image and Info  -->
+                    <div>
+                        <img src="images/tea-1.png" alt="" class="w-32 h-52 mx-auto pb-5">
+                        <h1 class="font-manrope font-bold text-2xl text-center">Milk Tea</h1>
+                        <p class="text-gray-500 text-center font-manrope">Creamer could be replaced by fresh milk.</p>
+                    </div>
+                </div>
+                <!-- card 2 -->
+                <div class="px-16 space-y-4 w-72 h-96 bg-[#F4F4F4] rounded-lg py-4 shadow-lg ">
+                    <!-- Image and Info  -->
+                    <div>
+                        <img src="images/tea-2.png" alt="" class="w-32 h-52 mx-auto pb-5">
+                        <h1 class="font-manrope font-bold text-2xl text-center">Black Tea</h1>
+                        <p class="text-gray-500 text-center font-manrope">Creamer could be replaced by fresh milk.</p>
+                    </div>
+                </div>
+                <!-- card 3 -->
+                <div class="px-16 space-y-4 w-72 h-96 bg-[#F4F4F4] rounded-lg py-4 shadow-lg ">
+                    <!-- Image and Info  -->
+                    <div>
+                        <img src="images/tea-3.png" alt="" class="w-32 h-52 mx-auto pb-5">
+                        <h1 class="font-manrope font-bold text-2xl text-center">Choco Tea</h1>
+                        <p class="text-gray-500 text-center font-manrope">Creamer could be replaced by fresh milk.</p>
+                    </div>
+                </div>
+                <!-- card 4 -->
+                <div class="px-16 space-y-4 w-72 h-96 bg-[#F4F4F4] rounded-lg py-4 shadow-lg ">
+                    <!-- Image and Info  -->
+                    <div>
+                        <img src="images/tea-4.png" alt="" class="w-32 h-52 mx-auto pb-5">
+                        <h1 class="font-manrope font-bold text-2xl text-center">Coffe Tea</h1>
+                        <p class="text-gray-500 text-center font-manrope">Creamer could be replaced by fresh milk.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Great Tea section  -->
+        <section class="mb-24">
+            <div class="grid grid-cols-1 lg:grid-cols-2">
+                <!-- Great Tea Image Layout  -->
+                <div class="grid grid-cols-2 grid-rows-3 gap-4 w-5/6 mx-auto mb-5">
+                    <div class="h-40 bg-gradient-to-r from-red-100 to-red-50 rounded-lg"></div>
+                    <div class="bg-gradient-to-r from-yellow-50 to-yellow-100 row-span-2 rounded-lg">
+                        <img src="images/fresh-1.png" alt="" class="mx-auto my-7">
+                    </div>
+                    <div class="bg-gradient-to-r from-stone-50 to-stone-100 row-span-2 rounded-lg">
+                        <img src="images/fresh-2.png" alt="" class="mx-auto my-7">
+                    </div>
+                    <div class="h-40 bg-gradient-to-r from-gray-100 to-gray-50 rounded-lg"></div>
+                </div>
+                <!-- Great Tea info  -->
+                <div class="space-y-10">
+                    <h1 class="font-bold text-3xl lg:text-4xl">Great Tea, Freshly <br> Presented</h1>
+                    <p class="text-gray-500">The meaning of gong cha is chanese is to provide the best tea to emperor
+                        from all possessions . It represents the highest quality and self expectation. Establishing in
+                        2006, Gong cha had been deeply appreciated by its custoers because of good words of mouth and
+                        unique customized service orginated from Taiwan.</p>
+                    <h3 class="font-bold text-xl">Unique Taste</h2>
+                        <p class="text-gray-500">A Unique and different style from other teapots gives a luxurious and
+                            minimalist impression</p>
+                        <h3 class="font-bold text-xl">Premium Quality</h3>
+                        <p class="text-gray-500">Premium Quality that makes tea more elegant and more durable when you
+                            use it.</p>
+                </div>
+
+
+            </div>
+        </section>
+
+        <!-- super clients section  -->
+        <section class="mb-24">
+            <div
+                class="grid grid-cols-1 lg:grid-cols-2 bg-gradient-to-r from-[#FF0000] to-[#FF8938] rounded-lg px-7 md:px-16 text-[#FFFFFF]">
+                <!-- text section  -->
+                <div class="flex justify-center items-center">
+                    <div class="w-5/6 py-7 space-y-5">
+                        <h1 class="font-bold text-4xl lg:text-5xl ">Meet Our Super <br> Clients</h1>
+                        <p class="">There are many variations of passages of Lorem Ipsum available, but the majority
+                            have
+                            suffered alteration in some form, by injected humour, or randomised words which don't look
+                            even
+                            slightly believable. </p>
+                        <button class="px-7 py-4 rounded-lg bg-white text-[#FF8938]">Show All</button>
+                    </div>
+                </div>
+                <!-- Review card section  -->
+                <div class="relative py-24 left-10 -top-5">
+                    <!-- middle card  -->
+                    <div
+                        class="absolute h-44 bg-white rounded-lg w-full md:w-3/4 flex items-center px-5 top-52 -left-10 z-10">
+                        <div class="absolute -top-7 -left-7 bg-white rounded-full">
+                            <img src="images/client.png" alt="" class="p-1">
+                        </div>
+                        <div class="space-y-3">
+                            <p class="text-gray-500 mb-5">We are providing the best and suitable home insurance services
+                                for
+                                the people who are interested to treatment</p>
+                            <h1 class="text-black font-semibold">Ilham Yuda</h1>
+                            <p class="font-medium text-gray-600">Businessman</p>
+
+                        </div>
+                    </div>
+                    <!-- top card  -->
+                    <div
+                        class="relative h-44 bg-white rounded-lg w-full md:w-3/4 flex items-center px-5 left-4 sm:left-10 lg:left-20 opacity-40">
+                        <div class="absolute -top-7 -left-7 bg-white rounded-full">
+                            <img src="images/client.png" alt="" class="p-1">
+                        </div>
+                        <div class="space-y-3">
+                            <p class="text-gray-500 mb-5">We are providing the best and suitable home insurance services
+                                for
+                                the people who are interested to treatment</p>
+                            <h1 class="text-black font-semibold">Ilham Yuda</h1>
+                            <p class="font-medium text-gray-600">Businessman</p>
+
+                        </div>
+                    </div>
+
+                    <!-- bottom card  -->
+                    <div
+                        class="relative top-10 h-44 bg-white rounded-lg w-full md:w-3/4 flex items-center px-5 left-4 sm:left-10 lg:left-20 opacity-40">
+                        <div class="absolute -top-7 -left-7 bg-white rounded-full">
+                            <img src="images/client.png" alt="" class="p-1">
+                        </div>
+                        <div class="space-y-3">
+                            <p class="text-gray-500 mb-5">We are providing the best and suitable home insurance services
+                                for
+                                the people who are interested to treatment</p>
+                            <h1 class="text-black font-semibold">Ilham Yuda</h1>
+                            <p class="font-medium text-gray-600">Businessman</p>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        
+    </main>
+    <footer>
+
+    </footer>
 </body>
+
 </html>
