added the footer

--- a/index.html
+++ b/index.html
@@ -196,10 +196,20 @@
                 </div>
             </div>
         </section>
+
         
     </main>
-    <footer>
-
+    <!-- Footer section  -->
+    <footer class="bg-gradient-to-r from-[#ff88385f] to-[#ff00003f]">
+        <div class="flex justify-between mx-28 items-center py-5">
+            <div>
+                <img src="images/cup.png" alt="">
+            </div>
+            <div class="flex items-center gap-4">
+                <p class="text-gray-500">Ready to get started?</p>
+                <button class="px-5 py-4 bg-gradient-to-r from-[#FF8938] to-[#FF0000] rounded-lg">Get Started</button>
+            </div>
+        </div>
     </footer>
 </body>
 
