updated my portfolio footer

--- a/index.html
+++ b/index.html
@@ -200,8 +200,8 @@
         
     </main>
     <!-- Footer section  -->
-    <footer class="bg-gradient-to-r from-[#ff88385f] to-[#ff00003f]">
-        <div class="flex justify-between mx-28 items-center py-5">
+    <footer class="bg-gradient-to-r from-[#ff88385f] to-[#ff00003f] py-28">
+        <div class="flex justify-between mx-10 lg:mx-28 items-center py-5 pb-16">
             <div>
                 <img src="images/cup.png" alt="">
             </div>
@@ -210,6 +210,40 @@
                 <button class="px-5 py-4 bg-gradient-to-r from-[#FF8938] to-[#FF0000] rounded-lg">Get Started</button>
             </div>
         </div>
+        <div class="grid grid-cols-2 lg:grid-cols-4 px-10 md:px-28 pb-16 py-3">
+            <div class="space-y-2">
+                <h1 class="font-bold text-xl">Quick Links</h1>
+                <p class="gray-500">Home</p>
+                <p class="gray-500">About Us</p>
+                <p class="gray-500">Insurance</p>
+                <p class="gray-500">Privacy Policy</p>
+            </div>
+            <div class="space-y-2">
+                <h1 class="font-bold text-xl">Quick Links</h1>
+                <p class="gray-500">Home</p>
+                <p class="gray-500">About Us</p>
+                <p class="gray-500">Insurance</p>
+                <p class="gray-500">Privacy Policy</p>
+            </div>
+            <div class="space-y-2">
+                <h1 class="font-bold text-xl">Quick Links</h1>
+                <p class="gray-500">Home</p>
+                <p class="gray-500">About Us</p>
+            </div>
+            <div>
+                <h1 class="font-semibold text-2xl pb-3">Subscribe to our <br> newsletter</h1>
+                <input type="text" placeholder="Email address" class="border-none bg-[#ff000002] pb-4">
+                <button class="px-4 py-2 bg-gradient-to-r from-[#FF8938] to-[#FF0000] rounded-full">></button>
+                <hr class="text-gray-500 border-gray-100 w-52 pb-4">
+                <div class="flex gap-3">
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-instagram"></i>
+
+                </div>
+            </div>
+        </div>
+        <div class="flex justify-center items-center"><p>© 2027 UIDesign.to - All rights reserved.</p></div>
     </footer>
 </body>
 
